<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/top_menu">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_find" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_categories" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/tools_menu">
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/exit_menu">
        <item
            android:id="@+id/nav_exit"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/menu_exit" />

    </group>

</menu>
